# Drone-Tracking

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
drone_tracking/: tracking.py  tracking_subscriber.py
drone_tracking/data_augmentation/: data_augmentation.py
drone_tracking/data_augmentation/imgs_and_labels/: 0001_rotated.txt  0003_rotated.txt  0004_rotated.txt  0005_rotated.txt  draw_yolo_bboxes.py
drone_tracking_cpp/: CMakeLists.txt
drone_tracking_cpp/src/: tracking_node.cpp
drone_tracking_py/: package.xml  setup.cfg  setup.py
drone_tracking_py/drone_tracking_py/: tracking.py  tracking_subscriber.py
drone_tracking_py/net_train/: args.yaml  results.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone_tracking_cpp/lib/drone_tracking_cpp/: tracking_node
install/drone_tracking_cpp/share/drone_tracking_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
net_train/weights/: metadata.yaml
net_train/weights/best_ncnn_model/: metadata.yaml
simulation/worlds/: meu_mundo.sdf
src/: tracking_node.cpp
